syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registrar (KeyManagerRequest) returns (KeyManagerResponse) {}
}


service KeyManagerRemoveService {
  rpc remover (DeletePixKeyRequest) returns (DeletePixKeyResponse){}
}


enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
message KeyManagerRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message KeyManagerResponse {
  string pixId = 1;
}

message DeletePixKeyRequest{
  string pixId = 1;
  string clientId = 2;
}

message DeletePixKeyResponse{
  string message = 1;
}

